--- a/BulkMail/BulkMail.csproj
+++ b/BulkMail/BulkMail.csproj
@@ -64,6 +64,12 @@
     <Compile Include="CampagneAdd.Designer.cs">
       <DependentUpon>CampagneAdd.cs</DependentUpon>
     </Compile>
+    <Compile Include="PiecesJointesView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PiecesJointesView.Designer.cs">
+      <DependentUpon>PiecesJointesView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="xml\LoadXML.cs" />
@@ -77,6 +83,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainView.resx">
       <DependentUpon>MainView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PiecesJointesView.resx">
+      <DependentUpon>PiecesJointesView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
