--- a/BulkMail/BulkMail.csproj
+++ b/BulkMail/BulkMail.csproj
@@ -33,6 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -72,9 +73,16 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SMTPsettings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SMTPsettings.Designer.cs">
+      <DependentUpon>SMTPsettings.cs</DependentUpon>
+    </Compile>
+    <Compile Include="xml\FileUtils.cs" />
     <Compile Include="xml\LoadXML.cs" />
     <Compile Include="xml\SaveXML.cs" />
-    <Compile Include="xml\XMLState.cs" />
+    <Compile Include="xml\MailData.cs" />
     <EmbeddedResource Include="CampagneAdd.resx">
       <DependentUpon>CampagneAdd.cs</DependentUpon>
     </EmbeddedResource>
